# LLM-Hardware-Experiments

./: .flake8  .gitignore  README.md  llm_config.sample.yaml  pyproject.toml  requirements.txt  secrets.sample.yaml
.cspell/: custom-dictionary-workspace.txt
llm_experiments/: __init__.py
llm_experiments/cli_tools/: pull_llama_models.py
llm_experiments/experiments/: llm_code_gen_debugger_agent.py  llm_code_gen_langchain.py  llm_code_gen_retries.py  scan_hardware_bugs.py  single_code_gen.py  single_llm_code_gen.py  validate_testbenches.py
llm_experiments/experiments/common/: simple_code_gen_problem.py  verilog_eval_problems.py
llm_experiments/feedback_eval_tools/: feedback_eval_tool_base.py  feedback_eval_tool_types.py  install_oss_cad.py
llm_experiments/intermediate_steps/: extract_verilog.py  line_numbering.py  split_large_files.py
llm_experiments/llms/: llm_base.py  llm_config_base.py  llm_from_config.py  llm_provider_base.py  llm_types.py
llm_experiments/llms/models/: chatgpt_llm.py  (+2 more)
llm_experiments/logging/: data_manipulation.py  env_logging.py  llm_logging.py  presenters.py  text_terminal_logging.py
llm_experiments/util/: download_helpers.py  execute_cli.py  path_helpers.py  strip_paths.py
tests/: test_0.py  test_text_terminal_logging.py
tests/feedback_eval_tools/: test_iverilog_tool.py
tests/intermediate_steps/: test_extract_verilog.py
tests/llms/: test_all_llms.py  test_config_reader.py
tests/logging/: test_env_logging.py  test_text_terminal_logging.py
tests/util/: test_execute_cli.py  test_path_helpers.py  test_strip_paths.py
(+6 files in other folders)
